fix touch to play chess on mobile

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+
+.overflow-hidden {
+    overflow: hidden !important;
+}
+
 .board {
     width: 400px;
     margin: auto;
